--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,16 @@
 version: 2.1
 
 jobs:
-  test:
+  hello-job:
     docker:
-      - image: cimg/node:18.17
+      - image: cimg/base:stable
     steps:
       - checkout
-      - run: npm install
-      - run: npm test
+      - run:
+          name: Say Hello
+          command: echo "Hello from CircleCI"
 
 workflows:
-  demo_workflow:
+  hello-workflow:
     jobs:
-      - test
+      - hello-job
