Change greeting from 'Hello' to 'Hi' in config
Updated the command in the CircleCI config to say 'Hi'.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
       - run:
           name: Say Hello
           command: echo "Hello from CircleCI"
+          command: echo "Hi"
+
 
 workflows:
   hello-workflow:
