Add command to echo message in CircleCI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,8 @@ jobs:
       - checkout
       - run:
           name: Force Failure
+          command: echo "Hello from CircleCI"
+
 
 workflows:
   hello-workflow:
